syntax = "proto3";

package vortech.stream_management.config;

import "buf/validate/validate.proto";

option go_package = "pkg/config;config";

message Config {
  // for common
  Listener grpc_listener = 1 [(buf.validate.field).required = true];
  Listener http_listener = 2 [(buf.validate.field).required = true];
  Logger logger = 3 [(buf.validate.field).required = true];

  // for inside
  Authorization authorization = 11 [(buf.validate.field).required = true];
  StreamToken stream_token = 12 [(buf.validate.field).required = true];

  // for outsider
  CasTable cas_table = 21 [(buf.validate.field).required = true];
}

message TCPSocket {
  string address = 1;
  uint32 port = 2;
  bool secure = 3;
}

message UnixSocket {
  string path = 1;
}

message Listener {
  oneof socket {
    option (buf.validate.oneof).required = true;

    TCPSocket tcp = 1;
    UnixSocket unix = 2;
  }
}

message Logger {
  enum Level {
    UNSPECIFIED = 0;
    DEBUG = 1;
    INFO = 2;
    WARN = 3;
    ERROR = 4;
    PANIC = 5;
    FATAL = 6;
  }
  Level level = 1;
  bool pretty = 2;
}

message JwtSigning {
  string private_key = 1 [(buf.validate.field).string = {min_bytes : 1}];
  string issuer = 2 [(buf.validate.field).string.min_len = 1];
  string default_audience = 3;
  int64 expires_time = 4; // in milliseconds
}

message Authorization {
  bool enabled = 1;
  string secret_key = 2;
}

message StreamToken {
  bool enabled = 1;
  JwtSigning jwt_signing = 2;
}

message CasTable {
  bool enabled = 1;
  TCPSocket socket = 2 [(buf.validate.field).required = true];
}

