syntax = "proto3";

package vortech.stream_management.management;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "api/v1/management;management";

service Management {
  // Get the current status of the stream management service.
  rpc GetStatus(GetStatusRequest) returns (GetStatusReply) {
    option (google.api.http) = {get: "/v1/management/status"};
  }
}

message GetStatusRequest {}

message GetStatusReply {
  string status = 1;
}
